--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -55,6 +55,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 
   @include mixins.mobile {
     flex-direction: column;
